# jwt_template

./: .gitignore
backend_fastapi/: README.md  alembic.ini  main.py  old_pyproject.toml  pyproject.toml
backend_fastapi/alembic/: env.py
backend_fastapi/alembic/versions/: 1290425a2942_some_minor.py  14c5b9175445_fixed_mapping_and_ordered_by.py  15a48ced90d5_fixin_users_and_tokens.py  3222b3a08018_remove_updated_at_from_refresh_tokens_.py  6a02f2250b87_fixed_mapping_for_tokens.py  811d2b5d7f3e_hash_to_pass.py  8e2a5ef6b98b_initial_migration.py  b86a2045419e_update_default_value_for_timestamp_with_.py  c6d283646162_token_jti.py
backend_fastapi/backend/: security.py  utils.py
backend_fastapi/backend/api/: auth.py  dependencies.py  items.py  router.py
backend_fastapi/backend/api/actions/: auth.py  permissions.py  verification.py
backend_fastapi/backend/api/users/: admins.py  profile.py  users.py
backend_fastapi/backend/core/: database.py  project_config.py
backend_fastapi/backend/models/: base_model.py  item_model.py  security_model.py  user_model.py
backend_fastapi/backend/repositories/: tasks_repository.py  token_repository.py  users_repository.py
backend_fastapi/backend/schemas/: base_scheme.py  items_schema.py  oauth_scheme.py  user_scheme.py
backend_fastapi/backend/services/: item_service.py  token_service.py  user_service.py
backend_fastapi/envs/: .env.my
backend_fastapi/tests/core/: test_middleware.py
backend_fastapi/tests/users/: conftest.py  database.py  test_endpoint.py
backend_fastapi/utils/: create_superuser.py  setup.py
(+29 files in other folders)
